compiler/weave_syntax/tests/data/Trivia.error
error: Expected '{'
        --> <source>:7:8
         |
       7 |     if let Some(comment) /* for Some() */ = /* for TryReadComment() */ self.TryReadComment() {
         |        ^^^
error: Expected 'if'
        --> <source>:9:7
         |
       9 |     } else {
         |       ^^^^
error: Expected '}'
        --> <source>:15:1
         |
      15 | 
         | ^
